--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install zip tool (for Windows)
+        if: matrix.os == 'windows-latest' # This condition makes the step run only on Windows
+        run: choco install zip
+
       # 2. Install the Rust toolchain.
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
