fix(ci): Correctly trigger workflow on tag push

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,8 @@ name: Release CI
 on:
   push:
     branches: [ main, master ]
+    tags:
+	- 'v*'
   pull_request:
     branches: [ main, master ]
   # This allows you to run the workflow manually from the Actions tab on GitHub.
