--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ clap = { version = "4.5.40", features = ["derive", "cargo"] }
 ignore = "0.4.23"
 once_cell = "1.21.3"
 tiktoken-rs = "0.7.0"
+serde_json = "1.0.143"
