--- a/.flattener.toml
+++ b/.flattener.toml
@@ -2,14 +2,14 @@
 [profiles.rust2]
 description = "Profile for a Rust project"
 exclude_dirs = ["target", "target/debug", "target/release"]
-include_globs = ["src/*"]
-allowed_filenames = ["Cargo.toml", "Cargo.lock"]
+include_globs = ["src/**", "Cargo.toml", "Cargo.lock"]
 max_size = 1.0
 gpt4_tokens = true
 
 [profiles.battle-system]
 description = "Profile for the battle system in the Next.js project"
-extensions = ["tsx", "css", "js"]
+# Use leading dots for extensions for clarity and consistency with the tool's normalization.
+extensions = [".tsx", ".css", ".js"]
 include_globs = [
     "src/pages/_app.tsx",
     "src/components/Layout.tsx",
@@ -30,4 +30,14 @@ include_globs = [
     "tailwind.config.js",
     "postcss.config.js",
 ]
+# Example: exclude tests and build artifacts for this profile
+# exclude_globs = ["**/*.spec.*", "**/*.test.*", "**/dist/**", "**/build/**"]
+markdown = true
+
+[profiles.gold-standard]
+description = "Gold-standard, highly-customized example profile demonstrating available options and a Rust-focused setup."
+profile = "rust" # extends the built-in 'rust' profile so we inherit .rs/.toml defaults
+extensions = [".rs", ".toml", ".md", ".yml", ".yaml", ".json", ".ron", ".lock"]
+allowed_filenames = ["Cargo.toml", "Cargo.lock", "build.rs", ".rustfmt.toml", "README.md"]
+include_globs = ["src/**", "examples/**", "benches/**", "tests/**", "Cargo.toml", "Cargo.lock", "build.rs"]
 markdown = true
