--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ ignore = "0.4.23"
 once_cell = "1.21.3"
 tiktoken-rs = "0.7.0"
 serde_json = "1.0.143"
+
+[dev-dependencies]
+assert_cmd = "2.0"
+predicates = "2.1"
+tempfile = "3.6"
